syntax = "proto3";

package com.rus.nawm.grpcclient;

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string phone_number = 4;
}

message Document {
  string id = 1;
  string number = 2;
  User owner = 3;
  int32 expiration_month = 4;
  int32 expiration_year = 5;
  bool is_valid = 6;
}

message ValidateDocumentRequest {
  Document document = 1;
}

message ValidateDocumentResponse {
  Document document = 1;
  bool is_valid = 2;
}

service DocumentValidator {
  rpc ValidateDocument(ValidateDocumentRequest) returns (ValidateDocumentResponse);
}